# islelib-py

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  azure-pipelines.yml  pip-freeze.txt  readthedocs.yml  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/zdevelop/make_scripts/: make_name.html
docs/_sources/: index.rst.txt
islelib/: _version.py
junit/: test-results.xml
reports/: tests_junit.xml
zdevelop/azure_scripts/: check_coverage.py  check_version.py
zdevelop/azure_templates/: install_pip_configs.yml  install_pip_configs_win.yml  run_tests.yml  setup_pip.yml  setup_pip_win.yml
zdevelop/make_scripts/: common.py  make_name.py  make_version.py
zdevelop/tests/: test_example.py
zdocs/source/: conf-template  conf.py  index.rst
