[bumpversion]
current_version = 0.1.1
part = patch

[metadata]
name = islelib
description = a python template
author = Billy Peake

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
	pytest

[options.extras_require]
dev = 
	flake8@https://github.com/PyCQA/flake8/archive/69b1eb33.zip
	black
	sphinx
	autopep8
	mypy
	pytest-sugar
	pytest-cov
	pytest-html
	bumpversion
	sphinx-autodoc-typehints
	sphinx_rtd_theme

[flake8]
max-line-length = 88
max-complexity = 10
exclude = 
	/Users/williampeake/venvs/,
	docs/conf.py,
	build,
	dist,
	.git,
	__pycache__,
	tests,
	.tox,
	.eggs,
	.coverage,
	*.egg,
	*_cache
	tests/_reports
	zdevelop/scratch

[pep8]
max-line-length = 88

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
show_error_context = True
no_implicit_optional = True
warn_redundant_casts = True

[mypy-pytest,setuptools]
ignore_missing_imports = True

[mypy-zdevelop.scratch.*]
ignore_errors = True

[tool:pytest]
testpaths = zdevelop/tests
addopts = 
	--cov
	--cov-report=html
	--html=zdevelop/tests/_reports/test_results.html
	--self-contained-html

[coverage:run]
source = islelib

[coverage:html]
directory = zdevelop/tests/_reports/coverage
title = coverage report for islelib

[build_sphinx]
project = islelib
copyright = '2018, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

